:wrench: Fix t-switch-gray color on mobile

--- a/src/sass/partials/_footer.sass
+++ b/src/sass/partials/_footer.sass
@@ -66,22 +66,22 @@
 
 
 	&__options
-		padding-top: 74px;
-		display: inline-flex;
-		width: 100%;
-		justify-content: space-between;
+		padding-top: 74px
+		display: inline-flex
+		width: 100%
+		justify-content: space-between
 		@include desk
 			display: none
-			padding-top: 0px;
+			padding-top: 0px
 
 		.options__switch-mode
-			margin: 0;
-			margin-top: 72px;
+			margin: 0
+			margin-top: 72px
 
 		.back-top
-			transform-origin: center center 0px;
-			transform: matrix(0, 1, -1, 0, -14, 0);
-			font-size: 9px;
+			transform-origin: center center 0px
+			transform: matrix(0, 1, -1, 0, -14, 0)
+			font-size: 9px
 			@include desk
 				transform: matrix(0,1,-1,0,-14,76)
 				font-size: 14px
